Modification du fichier html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Training pour apprendre Git</h1>
+    <p>La raison du plus fort est toujours la meilleure</p>
 </body>
 </html>
